[gd_scene load_steps=43 format=3 uid="uid://7qg06aoyux0b"]

[ext_resource type="Texture2D" uid="uid://did0vjveov8bw" path="res://assets/characters/enemy_ontogonist/Ontogonist-idle.png" id="1_6mgkm"]
[ext_resource type="Script" uid="uid://peqiov3hr2rw" path="res://scenes/characters/enemy_ontogonist/enemy_ontogonist.gd" id="1_ho35q"]
[ext_resource type="Texture2D" uid="uid://bedop7qn00iyu" path="res://assets/characters/enemy_ontogonist/Ontogonist-die.png" id="2_3nyqj"]
[ext_resource type="Texture2D" uid="uid://bqgyfk08sdhs8" path="res://assets/characters/enemy_ontogonist/Ontogonist-walk.png" id="2_ho35q"]
[ext_resource type="Texture2D" uid="uid://cdbyw7l6mqtl6" path="res://assets/characters/enemy_ontogonist/Ontogonist-stunned.png" id="5_e5nqs"]
[ext_resource type="AudioStream" uid="uid://c83vnjmn7ekxo" path="res://assets/sounds/enemy_death/puf.mp3" id="5_s7i0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nyqj"]
size = Vector2(9, 21)

[sub_resource type="Animation" id="Animation_3nyqj"]
resource_name = "Death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Audio/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.100004),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e5nqs"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_h4ln0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Audio/AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b5up4"]
length = 1.33333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="Animation" id="Animation_sn138"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["stunned"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5nqs"]
_data = {
&"Death": SubResource("Animation_3nyqj"),
&"Idle": SubResource("Animation_e5nqs"),
&"RESET": SubResource("Animation_h4ln0"),
&"Walk": SubResource("Animation_b5up4"),
&"stunned": SubResource("Animation_sn138")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_nu3wy"]
atlas = ExtResource("2_3nyqj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o4l0"]
atlas = ExtResource("2_3nyqj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxu0d"]
atlas = ExtResource("2_3nyqj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vte4w"]
atlas = ExtResource("2_3nyqj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4elji"]
atlas = ExtResource("2_3nyqj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekmfo"]
atlas = ExtResource("2_3nyqj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klc8r"]
atlas = ExtResource("2_3nyqj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yl01"]
atlas = ExtResource("2_3nyqj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ept5"]
atlas = ExtResource("2_3nyqj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyk47"]
atlas = ExtResource("2_3nyqj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nel52"]
atlas = ExtResource("2_3nyqj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip7h1"]
atlas = ExtResource("2_3nyqj")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nyqj"]
atlas = ExtResource("1_6mgkm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7i0l"]
atlas = ExtResource("1_6mgkm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5nqs"]
atlas = ExtResource("2_ho35q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5up4"]
atlas = ExtResource("2_ho35q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ln0"]
atlas = ExtResource("2_ho35q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn138"]
atlas = ExtResource("2_ho35q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxbyf"]
atlas = ExtResource("2_ho35q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehb5"]
atlas = ExtResource("2_ho35q")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8w55"]
atlas = ExtResource("2_ho35q")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5e1"]
atlas = ExtResource("2_ho35q")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25hdk"]
atlas = ExtResource("5_e5nqs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eap1"]
atlas = ExtResource("5_e5nqs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdxvd"]
atlas = ExtResource("5_e5nqs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqw73"]
atlas = ExtResource("5_e5nqs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj73r"]
atlas = ExtResource("5_e5nqs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nu3wy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu3wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxu0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vte4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4elji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekmfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klc8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ept5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyk47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nel52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip7h1")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nyqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7i0l")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5nqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5up4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ln0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn138")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxbyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8w55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5e1")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25hdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eap1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdxvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqw73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj73r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqw73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj73r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqw73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj73r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqw73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj73r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdxvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eap1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25hdk")
}],
"loop": false,
"name": &"stunned",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ho35q"]
cull_mode = 1
polygon = PackedVector2Array(-4, 11, -4, 13, 3, 13, 3, 11)

[node name="Enemy_ontogonist" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_ho35q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_3nyqj")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 64
lifetime = 0.2
speed_scale = 0.3
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector2(0, 100)
color = Color(0.0431373, 0.0431373, 0.0431373, 0.827451)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_e5nqs")
}
autoplay = "Idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_nu3wy")
animation = &"stunned"
autoplay = "Idle"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -3)
occluder = SubResource("OccluderPolygon2D_ho35q")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="KillboxArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KillboxArea"]
position = Vector2(-0.0486109, -1.90735e-06)
scale = Vector2(0.902778, 1)
polygon = PackedVector2Array(4.48461, -9, 4.48461, -8, -5.48461, -8, -5.48461, -9)

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_s7i0l")
volume_db = -1.0
bus = &"ReverbBus"

[node name="ObstacleController" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)
collision_mask = 4

[node name="FloorCollider" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 75)
collision_mask = 4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="KillboxArea" to="." method="_on_killbox_area_body_entered"]
